tests/src/frontend/syntax/invalid/matches_tuple_name.sk
fun main(): void {
  a is (b, 12);
}
